--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "request": "^2.81.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "pm2": "^2.4.5"
   }
 }
