--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "request": "^2.81.0",
     "express": "^4.14.0",
-    "pm2": "^2.4.5"
+    "pm2": "^2.4.5",
+    "pmx": "^1.1.0"
   }
 }
